--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <p>这只是一个上传图片的网站</p>
+<video controls width="250">
+    <source src="video/test.mp4" type="video/mp4">
+    Download the
+    <a href="video/test.mp4">MP4</a>
+    video.
+</video>
