--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
-<p>这只是一个上传图片的网站</p>
-<video controls width="1000">
-    <source src="video/test.mp4" type="video/mp4">
-    Download the
-    <a href="video/test.mp4">MP4</a>
-    video.
-</video>
+<SCRIPT language=JavaScript> 
+function password() {  
+var testV = 1;  
+var pass1 = prompt('请输入密码:',''); 
+while (testV < 3) { 
+if (!pass1) 
+history.go(-1); 
+if (pass1 == "19870107") { 
+alert('密码正确!'); 
+break; 
+} 
+testV+=-1; 
+var pass1 = prompt('密码错误!请重新输入:'); 
+} 
+if (pass1!="password" & testV ==3) 
+history.go(-1); 
+return " "; 
+} 
+document.write(password()); 
+</SCRIPT>
+<head>
+          <title>石林的周记</title>
+     </head>
+<head>
+	<meta charset="utf-8">
+	<title>石林的周记</title>
+</head><br/>
+<p>2024.3.30</p><br/>
+<p>每次我上交周记的时候，都能发现我的周记被扒出来.</p><br/>
+<p>然后被放在第一个.</p><br/>
+<p>前几天我又发现刘子昂和杨景翔他们两个看我的周记.<p><br/>
+<P>上一周我也发现他们看我的周记了.<p><br/>
+<p>我都不知道他们在好奇我什么<p><br/>
+
