--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@ document.write(password());
 	<meta charset="utf-8">
 	<title>石林的周记</title>
 </head><br/>
-<p>2024.3.30</p><br/>
+<font size="10" color="blue">2024.03.30</font>
 <p>每次我上交周记的时候，都能发现我的周记被扒出来.</p><br/>
 <p>然后被放在第一个.</p><br/>
 <p>前几天我又发现刘子昂和杨景翔他们两个看我的周记.<p><br/>
 <P>上一周我也发现他们看我的周记了.<p><br/>
-<p>我都不知道他们在好奇我什么<p><br/>
+<p>我都不知道他们在好奇我什么.<p><br/>
+<p>以后我就在这里更新了.<p><br/>
+<p>不想让他们看.<p><br/>
 
