--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>石林的周记</title>
     <link rel="stylesheet" href="css/登录.css">
+        <body background="backgroung/background.jpg" 
+               style="background-repeat:no-repeat
+               background-attachment:fixed;
+               background-size:100% 100%; ">
+    </body>
 </head>
 <body>
     <div class="login">
