--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>石林的周记</title>
     <link rel="stylesheet" href="css/登录.css">
-        <body background="backgroung/background.jpg" 
-               style="background-repeat:no-repeat
-               background-attachment:fixed;
-               background-size:100% 100%; ">
-    </body>
+    <meta charset="UTF-8" />
+    <body background="background/background.jpg"
+     style="background-size:100% 100%;
+     background-attachment: fixed;">
 </head>
 <body>
     <div class="login">
