--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
      background-attachment: fixed;">
 </head>
 <body>
+     <style>
+	 div{color:white}
+     </style>
     <div class="login">
         <h1>Login</h1>
 	    <form action="https://20060913.github.io/home.html"> 
