--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="login">
      <style>
-	 div{color:white}
+	 <div{color:white}>
      </style>
         <h1>Login</h1>
 	    <form action="https://20060913.github.io/home.html"> 
