--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <body background="background/background.jpg"
+      style="background-size:100% 100%;
+      background-attachment: fixed;">
     <title>石林的周记</title>
     <link rel="stylesheet" href="css/登录.css">
 </head>
