--- a/home.html
+++ b/home.html
@@ -1,3 +1,20 @@
-<body>
-<font size="5">大家好！</font></br>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <body background="background/background.jpg"
+      style="background-size:100% 100%;
+      background-attachment: fixed;">
+    <title>石林的周记</title>
+</head>
+<font size="10" color="blue">2024.03.30</font>
+<p>每次我上交周记的时候，都能发现我的周记被扒出来.</p><br/>
+<p>然后被放在第一个.</p><br/>
+<p>前几天我又发现刘子昂和杨景翔他们两个看我的周记.<p><br/>
+<P>上一周我也发现他们看我的周记了.<p><br/>
+<p>我都不知道他们在好奇我什么.<p><br/>
+<p>以后我就在这里更新了.<p><br/>
+<p>不想让他们看.<p><br/>
+</html>
