--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
       <body background="background/background.jpg"
       style="background-size:100% 100%;
       background-attachment: fixed;">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>石林的周记</title>
 </head>
 <font size="10" color="blue">2024.03.30</font>
@@ -18,3 +19,17 @@
 <p>以后我就在这里更新了.<p><br/>
 <p>不想让他们看.<p><br/>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<font size="10" color="blue">2024.03.30</font>
