--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,28 +7,16 @@
       <body background="background/background.jpg"
       style="background-size:100% 100%;
       background-attachment: fixed;">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>石林的周记</title>
 </head>
 <font size="10" color="blue">2024.03.30</font>
-<p>每次我上交周记的时候，都能发现我的周记被扒出来.</p><br/>
-<p>然后被放在第一个.</p><br/>
-<p>前几天我又发现刘子昂和杨景翔他们两个看我的周记.<p><br/>
-<P>上一周我也发现他们看我的周记了.<p><br/>
-<p>我都不知道他们在好奇我什么.<p><br/>
-<p>以后我就在这里更新了.<p><br/>
-<p>不想让他们看.<p><br/>
+<font size="10" color="white">每次我上交周记的时候，都能发现我的周记被扒出来.</font><br/>
+<font size="10" color="white">然后被放在第一个.</font><br/>
+<font size="10" color="white">前几天我又发现刘子昂和杨景翔他们两个看我的周记.</font><br/>
+<font size="10" color="white">上一周我也发现他们看我的周记了.</font><br/>
+<font size="10" color="white">我都不知道他们在好奇我什么.</font><br/>
+<font size="10" color="white">不想让他们看.</font><br/>
+<font size="10" color="white">这属于隐私.</font><br/>
+<font size="10" color="white">以后我就在这里更新了.</font><br/>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<font size="10" color="blue">2024.03.30</font>
