--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>石林的周记</title>
 </head>
-<font size="10" color="light blue">2024.03.30</font>
-<font size="10" color="white">每次我上交周记的时候，都能发现我的周记被扒出来.</font><br/>
-<font size="10" color="white">然后被放在第一个.</font><br/>
+<font size="10" color="light blue">2024.03.30</font></br>
+<font size="10" color="white">每次我上交周记的时候，都能发现我的周记被扒出来.</font></br>
+<font size="10" color="white">然后被放在第一个.</font></br>
 <font size="10" color="white">前几天我又发现刘子昂和杨景翔他们两个看我的周记.</font><br/>
 <font size="10" color="white">上一周我也发现他们看我的周记了.</font><br/>
 <font size="10" color="white">我都不知道他们在好奇我什么.</font><br/>
