--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>石林的周记</title>
 </head>
-<font size="10" color=rgb(74, 119, 212)>2024.03.30</font></br>
+<font size="10" color="4A77D4">2024.03.30</font></br>
 <br>
 <font size="5" color="white">每次我上交周记的时候，都能发现我的周记被扒出来.</font><br>
 <br>
