--- a/home.html
+++ b/home.html
@@ -28,6 +28,8 @@
 <br>
 <font size="5" color="white">以后我就在这里更新了.</font><br>
 <br>
+<font size="5" color="white">评语先写在本上吧,评论功能还没搞定.</font><br>
+<br>
 <body>
 <script>
 function clickEffect() {
