--- a/home.html
+++ b/home.html
@@ -10,6 +10,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>石林的周记</title>
 </head>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<font size="5" color="white"> 本站访问量<span id="busuanzi_value_site_pv"></span>次</font><br>
+<br>
+<font size="5" color="white"> 本站访客数<span id="busuanzi_value_site_uv"></span>人次</font><br>
 <font size="9" color="4A77D4">2024.03.30</font></br>
 <br>
 <font size="5" color="white">每次我上交周记的时候，都能发现我的周记被扒出来.</font><br>
