--- a/warehouse/2024.03.30.html
+++ b/warehouse/2024.03.30.html
@@ -1,22 +1,35 @@
-<font size="10" color="blue">2024.03.30</font>
-<p>每次我上交周记的时候，都能发现我的周记被扒出来.</p>
-<p>然后被放在第一个.</p>
-<p>前几天我又发现刘子昂和杨景翔他们两个看我的周记.<p>
-<P>上一周我也发现他们看我的周记了.<p>
-<p>我都不知道他们在好奇我什么.<p>
-<p>以后我就在这里更新了.<p>
-<p>不想让他们看.<p>
-<p>周记我还正常交.<p>
-<p>评论写在本上就行.<p>
-<p>或者发我QQ上就行.<p>
-<p>我周末回家看.<p>
-<p>这次考试我对自己感觉不是太好.<p>
-<p>有好多地方还是不会.<p>
-<p>如果我要是再记几个公式的话.<p>
-<p>肯定又能多做几道题.<p>
-<p>语文的那个名句默写.<p>
-<p>最后一个我想不出来了.<p>
-<p>第二个我有个字还不会写.<p>
-<p>众女嫉余之蛾眉兮，谣诼谓余以善淫.<p>
-<p>“诼”我写成“浊”了.<p>
-<p>回头我再记记.<p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <body background="background/background.jpg"
+      style="background-size:100% 100%;
+      background-attachment: fixed;">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+    <title>石林的周记</title>
+<font size="9" color="4A77D4">2024.03.30</font></br>
+<br>
+<font size="5" color="white">这次考试我对自己感觉不是太好.</font><br>
+<br>
+<font size="5" color="white">有好多地方还是不会.</font><br>
+<br>
+<font size="5" color="white">如果我要是再记几个公式的话.</font><br>
+<br>
+<font size="5" color="white">肯定又能多做几道题.</font><br>
+<br>
+<font size="5" color="white">语文的那个名句默写.</font><br>
+<br>
+<font size="5" color="white">最后一个我想不出来了.</font><br>
+<br>
+<font size="5" color="white">第二个我有个字还不会写.</font><br>
+<br>
+<font size="5" color="white">众女嫉余之蛾眉兮，谣诼谓余以善淫.</font><br>
+<br>
+<font size="5" color="white">“诼”我写成“浊”了.</font><br>
+<br>
+<font size="5" color="white">回头我再记记.</font><br>
+      </body>
+</head>
+</html>
