--- a/warehouse/2024.03.30.html
+++ b/warehouse/2024.03.30.html
@@ -9,6 +9,7 @@
       background-attachment: fixed;">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>石林的周记</title>
+</head>
 <font size="9" color="4A77D4">2024.03.30</font></br>
 <br>
 <font size="5" color="white">这次考试我对自己感觉不是太好.</font><br>
