--- a/home.html
+++ b/home.html
@@ -30,9 +30,9 @@
 <br>
 <font size="5" color="white">评语先写在本上吧,评论功能还没搞定.</font><br>
 <br>
-<font size="6"</font> <a href="https://20060913.github.io/warehouse/2024.03.30.html" target="_blank">石林的周记1</a><br>
+<font size="6"</font> <a href="https://20060913.github.io/warehouse/2024.03.30.html" target="_blank">石林的周记1：2023.03.30</a><br>
 <br>
-<font size="6"</font> <a href="https://20060913.github.io/warehouse/2024.04.14.html" target="_blank">石林的周记2</a><br>
+<font size="6"</font> <a href="https://20060913.github.io/warehouse/2024.04.14.html" target="_blank">石林的周记2：2024.04.14</a><br>
 <body>
 <script>
 function clickEffect() {
