--- a/warehouse/2024.03.30.html
+++ b/warehouse/2024.03.30.html
@@ -34,7 +34,7 @@
 <br>
 <font size="6"</font> <a href="https://20060913.github.io/warehouse/2024.04.14.html" target="_blank">下一篇.石林的周记2：2024.04.14</a><br>
 <br>
-<font size="6"</font> <a herf="https://20060913.github.io/home.html" target="_blank">首页</a><br>
+<font size="6"</font> <a href="https://20060913.github.io/home.html" target="_blank">首页</a><br>
 <body>
 <script>
 function clickEffect() {
