--- a/warehouse/2024.03.30.html
+++ b/warehouse/2024.03.30.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <body background="background/background.jpg"
+      <body background="background.jpg"
       style="background-size:100% 100%;
       background-attachment: fixed;">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
