--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         // 查找元素
     } 
     function checkuser() { 
-        if(getValue('uname') == "石林" && getValue('pwd') == "20060913") { 
+        if(getValue('uname') == "石林" && getValue('pwd') == "20060913.") { 
             return true; 
         }else { 
             alert("登录名或密码错误！")
