--- a/warehouse/2024.04.20.html
+++ b/warehouse/2024.04.20.html
@@ -34,7 +34,7 @@
 <br>
 <font size="5" color="white">要不还是老师你来记名字吧.</font><br>
 <br>
-<font size="5" color="white">.</font>这样子最公平.<br>
+<font size="5" color="white">这样子最公平.</font><br>
 <br>
 <font size="6"</font> <a href="https://20060913.github.io/home.html" target="_blank">首页</a><br>
 <body>
