--- a/home.html
+++ b/home.html
@@ -33,6 +33,8 @@
 <font size="6"</font> <a href="https://20060913.github.io/warehouse/2024.03.30.html" target="_blank">石林的周记1：2023.03.30</a><br>
 <br>
 <font size="6"</font> <a href="https://20060913.github.io/warehouse/2024.04.20.html" target="_blank">石林的周记2：2024.04.20</a><br>
+<br>
+<font size="6"</font> <a href="https://20060913.github.io/warehouse/2024.04.27.html" target="_blank">石林的周记3：2024.04.27</a><br>
 <body>
 <script>
 function clickEffect() {
