--- a/warehouse/2024.04.20.html
+++ b/warehouse/2024.04.20.html
@@ -36,6 +36,10 @@
 <br>
 <font size="5" color="white">这样子最公平.</font><br>
 <br>
+<font size="6"</font> <a href="https://20060913.github.io/warehouse/2024.03.30.html" target="_blank">石林的周记1：2024.03.30</a><br>
+<br>
+<font size="6"</font> <a href="https://20060913.github.io/warehouse/2024.04.27.html" target="_blank">石林的周记3：2024.04.27</a><br>
+<br>
 <font size="6"</font> <a href="https://20060913.github.io/home.html" target="_blank">首页</a><br>
 <body>
 <script>
